--- a/WebProject/app/app.component.template.html
+++ b/WebProject/app/app.component.template.html
@@ -1,6 +1,21 @@
-﻿<h1>{{title}}</h1>
+﻿<!--<h1>{{title}}</h1>
+<h1>{{hero.name}} details</h1>
 <nav>
     <a routerLink="/">Dashboard</a>
     <a routerLink="/personal">PersonalCabinet</a>
 </nav>
+<router-outlet></router-outlet>-->
+<h1>{{title}}</h1>
+<h2>{{hero.name}} details!</h2>
+<div><label>id: </label>{{hero.id}}</div>
+<div><label>name: </label>{{hero.name}}
+</div>
+
+<h1>{{title}}</h1>
+<h2>{{hero.name}} details!</h2>
+<div><label>id: </label>{{hero.id}}</div>
+<div>
+    <label>name: </label>
+    <input [(ngModel)]="hero.name" placeholder="name">
+</div>
 <router-outlet></router-outlet>
