--- a/WebProject/app/app.component.template.html
+++ b/WebProject/app/app.component.template.html
@@ -5,17 +5,21 @@
     <a routerLink="/personal">PersonalCabinet</a>
 </nav>
 <router-outlet></router-outlet>-->
-<h1>{{title}}</h1>
-<h2>{{hero.name}} details!</h2>
-<div><label>id: </label>{{hero.id}}</div>
-<div><label>name: </label>{{hero.name}}
+<div *ngIf="selectedHero">
+    <h2>{{selectedHero.name}} details!</h2>
+    <div><label>id: </label>{{selectedHero.id}}</div>
+    <div>
+        <label>name: </label>
+        <input [(ngModel)]="selectedHero.name" placeholder="name" />
+    </div>
 </div>
 
 <h1>{{title}}</h1>
-<h2>{{hero.name}} details!</h2>
-<div><label>id: </label>{{hero.id}}</div>
-<div>
-    <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name">
-</div>
+<h2>My Heroes</h2>
+<ul class="heroes">
+    <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </li>
+</ul>
+
 <router-outlet></router-outlet>
