--- a/WebProject/app/app.component.template.html
+++ b/WebProject/app/app.component.template.html
@@ -5,14 +5,8 @@
     <a routerLink="/personal">PersonalCabinet</a>
 </nav>
 <router-outlet></router-outlet>-->
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name}} details!</h2>
-    <div><label>id: </label>{{selectedHero.id}}</div>
-    <div>
-        <label>name: </label>
-        <input [(ngModel)]="selectedHero.name" placeholder="name" />
-    </div>
-</div>
+
+<my-hero-detail [hero]="selectedHero"></my-hero-detail>
 
 <h1>{{title}}</h1>
 <h2>My Heroes</h2>
