--- a/WebProject/app/app.component.template.html
+++ b/WebProject/app/app.component.template.html
@@ -1,18 +1,4 @@
-﻿<!--<h1>{{title}}</h1>
-<h1>{{hero.name}} details</h1>
-<nav>
-    <a routerLink="/">Dashboard</a>
-    <a routerLink="/personal">PersonalCabinet</a>
-</nav>
-<router-outlet></router-outlet>-->
+﻿<h1>{{title}}</h1>
+<my-heroes></my-heroes>
 
-<my-hero-detail [hero]="selectedHero"></my-hero-detail>
-
-<h1>{{title}}</h1>
-<h2>My Heroes</h2>
-<ul class="heroes">
-    <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </li>
-</ul>
 
