--- a/WebProject/Index.html
+++ b/WebProject/Index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+    <base href="/">
     <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +16,7 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-        System.import('app').catch(function (err) { console.error(err); });
+        System.import('app').catch(function(err) { console.error(err); });
     </script>
 </head>
 <!-- 3. Display the application -->
