--- a/WebProject/app/app.component.template.html
+++ b/WebProject/app/app.component.template.html
@@ -1,4 +1,6 @@
 ﻿<h1>{{title}}</h1>
-<my-heroes></my-heroes>
-
-
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
