--- a/WebProject/app/hero/hero.component.template.html
+++ b/WebProject/app/hero/hero.component.template.html
@@ -1,8 +1,9 @@
-﻿<my-hero-detail [hero]="selectedHero"></my-hero-detail>
-
+﻿
 <h2>My Heroes</h2>
 <ul class="heroes">
-    <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <li *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]">
+            <span class="badge">{{hero.id}}</span> {{hero.name}}
     </li>
 </ul>
+
+
