--- a/WebProject/app/hero-detail/hero-detail.component.template.html
+++ b/WebProject/app/hero-detail/hero-detail.component.template.html
@@ -1,11 +1,11 @@
 ﻿<div *ngIf="hero">
-    <h2>{{hero.name}} details!</h2>
+    <h2>{{hero.Name}} details!</h2>
     <div>
-        <label>id: </label>{{hero.id}}
+        <label>id: </label>{{hero.Id}}
     </div>
     <div>
         <label>name: </label>
-        <input [(ngModel)]="hero.name" placeholder="name"/>
+        <input [(ngModel)]="hero.Name" placeholder="name"/>
     </div>
     <button (click)="goBack()">Back</button>
 </div>
