--- a/WebProject/app/hero/hero.component.template.html
+++ b/WebProject/app/hero/hero.component.template.html
@@ -3,12 +3,12 @@
     <li *ngFor="let hero of heroes"
         [class.selected]="hero === selectedHero"
         (click)="onSelect(hero)">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
+        <span class="badge">{{hero.Id}}</span> {{hero.Name}}
     </li>
 </ul>
 <div *ngIf="selectedHero">
     <h2>
-        {{selectedHero.name | uppercase}} is my hero
+        {{selectedHero.Name | uppercase}} is my hero
     </h2>
     <button (click)="gotoDetail()">View Details</button>
 </div>
